# portal-interdata

./: Makefile  README.md
ckan-docker/: Makefile
ckan-docker/src/ckanext-json-table/: MANIFEST.in  README.md  setup.cfg  test.ini
ckan-docker/src/ckanext-json-table/.github/workflows/: test.yml
ckan-docker/src/ckanext-json-table/ckanext/json_table/: cli.py  helpers.py  plugin.py  views.py
ckan-docker/src/ckanext-json-table/ckanext/json_table/assets/: script.js  webassets.yml
ckan-docker/src/ckanext-json-table/ckanext/json_table/logic/: action.py  auth.py  schema.py  validators.py
ckan-docker/src/ckanext-json-table/ckanext/json_table/templates/json_table/: json_table_form.html  json_table_view.html
ckan-docker/src/ckanext-json-table/ckanext/json_table/tests/: test_helpers.py  test_plugin.py  test_views.py
ckan-docker/src/ckanext-json-table/ckanext/json_table/tests/logic/: test_action.py  test_auth.py  test_validators.py
geojson/: Dockerfile  Makefile  default.conf  itb_jatinangor.geojson
geonetwork/: .gitignore  Makefile  readme.html
geonetwork/apps/geonetwork/WEB-INF/: config-spring-env.xml  config-spring-geonetwork.xml  config.properties  spring-servlet.xml  web.xml  wro-maven.properties  wro.properties
geonetwork/jetty/demo-base/webapps/: async-rest.war  javadoc-proxy.war  test-jaas.war  test-jndi.war  test-spec.war  test.war
geonetwork/jetty/etc/: jetty-deploy.xml
geonetwork/jetty/modules/: gcloud-datastore.mod  hawtio.mod  jolokia.mod  logback-impl.mod  session-store-infinispan-embedded.mod  session-store-infinispan-remote.mod  unixsocket.mod
webgis-vite/: Makefile  README.md  docker-compose.yml
webgis-vite/client/: .eslintrc.cjs  Dockerfile  Makefile  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
webgis-vite/client/src/: index.css  main.tsx
webgis-vite/client/src/webgis/: App.tsx  type.ts
(+30 files in other folders)
