[metadata]
name = ckanext-json-table
version = 0.0.1
description = An extension to visualize JSON data to tabular platform
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/samdyra/ckanext-json-table
author = sam
author_email = dwiputrasam@gmail.com
license = AGPL
classifiers =
            Development Status :: 4 - Beta
            License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
            Programming Language :: Python :: 3.7
            Programming Language :: Python :: 3.8
            Programming Language :: Python :: 3.9
            Programming Language :: Python :: 3.10
keywords = CKAN JSON Table tabular REST

[options]
packages = find:
namespace_packages = ckanext
install_requires =
include_package_data = True

[options.entry_points]
ckan.plugins =
             json_table = ckanext.json_table.plugin:JsonTablePlugin

babel.extractors =
                 ckan = ckan.lib.extract:extract_ckan

[options.extras_require]

[extract_messages]
keywords = translate isPlural
add_comments = TRANSLATORS:
output_file = ckanext/json_table/i18n/ckanext-json_table.pot
width = 80

[init_catalog]
domain = ckanext-json_table
input_file = ckanext/json_table/i18n/ckanext-json_table.pot
output_dir = ckanext/json_table/i18n

[update_catalog]
domain = ckanext-json_table
input_file = ckanext/json_table/i18n/ckanext-json_table.pot
output_dir = ckanext/json_table/i18n
previous = true

[compile_catalog]
domain = ckanext-json_table
directory = ckanext/json_table/i18n
statistics = true

[tool:pytest]
filterwarnings =
        ignore::sqlalchemy.exc.SADeprecationWarning
        ignore::sqlalchemy.exc.SAWarning
        ignore::DeprecationWarning
addopts = --ckan-ini test.ini
